--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,24 @@ position: "absolute", left: "68%", top: "40vh", zIndex:"200" */
 
 
 @media (max-width: 960px) {
+  .login{
+    background-image: linear-gradient(to right top, #2e58d4, #2953d1, #244fcf, #1f4acc, #1945c9) !important;
+    background-size: cover;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+  }
+  .for_form{
+    overflow: auto;
+  }
+  .log_mob{
+    background: transparent !important;
+    overflow: auto;
+  }
   .for_que {
     left: 0% !important;
   }
