--- a/src/App.css
+++ b/src/App.css
@@ -49,16 +49,20 @@ position: "absolute", left: "68%", top: "40vh", zIndex:"200" */
   .login{
     background-image: linear-gradient(to right top, #2e58d4, #2953d1, #244fcf, #1f4acc, #1945c9) !important;
     background-size: cover;
-    position: fixed;
+    position: relative !important;
+    overflow: auto;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
   }
   .for_form{
     overflow: auto;
+  }
+  .rem_tab{
+    display:none;
   }
   .log_mob{
     background: transparent !important;
